# spotify.nvim

./: .gitignore  Cargo.toml  LICENSE  README.md
lua/: spotify.lua
lua/spotify/: telescope.lua
rplugin/node/spotify-nvim/: .prettierrc.json  index.js  package-lock.json  package.json
rplugin/node/spotify-nvim/public/: index.html
src/: main.rs
