[package]
name = "spotify-nvim"
version = "0.1.0"
authors = ["smolck <46855713+smolck@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rspotify = "0.10.0"
tokio = { version = "0.2", features = ["full"] }
nvim-rs = { version = "0.2.0", features = ["use_tokio"] }
rmpv = "0.4.7"
async-trait = "0.1.42"
futures = "0.3.13"
